--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -25,10 +25,10 @@ jobs:
       
       - name: build kernel
         run: |
-          git clone -b rkr4.1-core3566 https://github.com/openhd/bsp
+          git clone -b rkr4.1-cm3 https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
-          ./bsp --long-version -r 1337 linux rk356x |& tee buildlog.log
+          ./bsp --long-version -r 1339 linux rk356x |& tee buildlog.log
 
       - name: little hack for github uploads
         run: |
@@ -49,7 +49,7 @@ jobs:
           command: "push"
           format: "deb"
           owner: "openhd"
-          repo: "openhd-2-3-evo"
+          repo: "dev-release"
           distro: "debian"
           release: "bullseye"
           republish: "true" # needed ONLY if version is not changing
@@ -63,7 +63,7 @@ jobs:
           command: "push"
           format: "deb"
           owner: "openhd"
-          repo: "openhd-2-3-evo"
+          repo: "dev-release"
           distro: "debian"
           release: "bullseye"
           republish: "true" # needed ONLY if version is not changing
@@ -77,7 +77,7 @@ jobs:
           command: "push"
           format: "deb"
           owner: "openhd"
-          repo: "openhd-2-3-evo"
+          repo: "dev-release"
           distro: "debian"
           release: "bullseye"
           republish: "true" # needed ONLY if version is not changing
