--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -26,7 +26,7 @@ jobs:
       
       - name: build kernel
         run: |
-          git clone -b rkr4.1-cm3 https://github.com/openhd/bsp
+          git clone https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
           ./bsp --long-version -r 1339 linux rk356x |& tee buildlog.log
