--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: debug dtsi
         run: |
           sudo apt-get install device-tree-compiler
-          dtc -I dts -O dtb -o rk3566-radxa-cm3.dtsi debug.dts
+          dtc -I dts -O dtb -o rk3566-radxa-cm3.dtsi
       - name: build kernel
         run: |
           git clone -b rkr4.1-core3566 https://github.com/openhd/bsp
